# FaceTrack

./: CMakeLists.txt  README.md
include/: FaceTracker.h
src/: Emotions.cpp  Emotions.h  FaceTracker.cpp  Ffmpeg.cpp  Ffmpeg.h  Tracker.cpp  Tracker.h  client.cpp  client_mmap.cpp  client_zmq.cpp  server.cpp  server_mmap.cpp  server_zmq.cpp  test.cpp
